# mtg-commander-suggestions

./: Cargo.toml  Dockerfile  Justfile  README.md  docker-compose.yml  renovate.json
.github/workflows/: rust.yml
scryfall-rs/src/: bulk.rs
scryfall-rs/src/card/: frame_effect.rs
scryfall-rs/src/set/: set_type.rs
src/: card_utils.rs  commander.rs  lib.rs  main.rs  scryfall_tags.rs  storage.rs
tests/: abomination-of-llanowar.json  integration_test.rs  minimal-collection.csv
