[package]
name = "mtg-commander-suggestions"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
clap = { version = "4.3.24", features = ["derive", "wrap_help"] }
color-eyre = "0.6.2"
csv = "1.3.0"
mongodb = "2.8.1"
scryfall = { version = "0.10.0", features = ["bulk_caching"], path = "scryfall-rs" }
serde = "1.0.197"
tokio = "1.36.0"

[dev-dependencies]
serde_json = "1.0.113"
