[package]
name = "mtg-commander-suggestions"
version = "0.1.0"
edition = "2021"

[features]

[dependencies]
clap = { version = "4.3.24", features = ["derive", "wrap_help"] }
color-eyre = "0.6.3"
csv = "1.3.0"
mongodb = "2.8.2"
scryfall = { version = "0.17.0", features = ["bulk_caching"], path = "scryfall-rs" }
serde = "1.0.200"
tokio = "1.37.0"

[dev-dependencies]
serde_json = "1.0.116"
